<resources>
    <string name="app_name">看书神器</string>
    <string name="more">more</string>
    <string name="search">搜索</string>
    <string name="change_source">换源</string>
    <string name="add_book">加入书架</string>
    <string name="reverse">反序</string>
    <string name="tips">提示</string>
    <string name="done">确定</string>
    <string name="cancel">取消</string>
    <string name="del">删除</string>
    <string name="detail">详情</string>
    <string name="cover">cover</string>
    <string name="search_input_search_str">请输入书名</string>
    <string name="read_fond_size_up">字体大</string>
    <string name="read_font_size_down">字体小</string>
    <string name="read_day">白天</string>
    <string name="read_night">晚上</string>
    <string name="read_download_part">下载30章</string>
    <string name="read_download">下载全文</string>
</resources>
