<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:visibility="gone"
    android:layout_height="match_parent"
    tools:context=".ui.ReadActivity" android:id="@+id/llySetting">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="0dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent" android:orientation="vertical"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" android:focusable="true"
            android:onClick="onDownloadPartListener"
            android:text="@string/read_download_part" style="@style/Base.Widget.AppCompat.Button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" android:focusable="true"
            android:onClick="onDownloadListener"
            android:text="@string/read_download" style="@style/Base.Widget.AppCompat.Button"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:contentPadding="0dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent" android:orientation="vertical"
            android:layout_height="wrap_content"
            android:padding="15dp"
            >
            <LinearLayout
                android:layout_width="wrap_content" android:orientation="horizontal"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" android:focusable="true"
                    android:onClick="onFontSizeUpListener"
                    android:text="@string/read_fond_size_up" style="@style/Base.Widget.AppCompat.Button"/>
                <TextView android:id="@+id/tvFontSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" android:focusable="true"
                    android:onClick="onFontSizeUpListener"
                    android:text="" android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" android:focusable="true"
                    android:onClick="onFontSizeDownListener"
                    android:text="@string/read_font_size_down" style="@style/Base.Widget.AppCompat.Button"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content" android:orientation="horizontal"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" android:focusable="true"
                    android:onClick="onDayListener"
                    android:text="@string/read_day" style="@style/Base.Widget.AppCompat.Button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" android:focusable="true"
                    android:onClick="onNightListener"
                    android:text="@string/read_night" style="@style/Base.Widget.AppCompat.Button"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>