<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="295dp" android:background="@android:color/white"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_marginTop="35dp" android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            tools:ignore="UselessParent">
            <TextView android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" android:text="@string/tips"
                android:textColor="@color/color_393129"
                android:layout_marginTop="48dp"
                android:layout_gravity="center_horizontal"
                />
            <View
                android:layout_width="40dp" android:layout_marginTop="15dp"
                android:layout_height="3dip" android:background="@color/color_cfcecc" />
            <TextView android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"   android:layout_marginTop="30dp"
                android:paddingLeft="30dp" android:paddingRight="30dp"
                android:textColor="@color/color_736c68"
                android:lineSpacingExtra="12.5sp"
                android:gravity="center_horizontal" android:layout_gravity="center_horizontal"
                android:text=""
                />
            <TextView android:id="@+id/tv_done"
                android:layout_width="match_parent" android:layout_height="40dp"
                android:text="@string/done"  style="@style/Base.Widget.AppCompat.Button"
                android:layout_gravity="center_horizontal" android:layout_marginTop="50dp"
                android:gravity="center" android:textSize="19sp"
                android:layout_marginStart="45dp" android:layout_marginEnd="45dp"
                android:layout_marginBottom="8dp" android:clickable="true"
                android:focusable="true"/>
            <TextView android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" android:clickable="true"
                android:textColor="@color/color_b1aeab" android:focusable="true"
                android:text="@string/cancel" android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp" />
            <View
                android:layout_width="10dp"
                android:layout_height="37dp" />
        </LinearLayout>
</LinearLayout>